Прочитал Теневой Дозор

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 <th><a id="a138" src="jpg/dozor_04.jpg" title="Время инверсий (аудиокнига)"></a></th>
 <th><img src="jpg/grom_2.jpg" title="Майор Гром. Игра слов. Художественный роман"></th>
 <th><img src="jpg/4_krilo_2.jpg" title="Железное пламя"></th>
@@ -1250,7 +1251,7 @@
 
 
 <table><tr align="left">
-<th colspan="2"><h4><a href="https://flibusta.site/a/18295"> Лесков Н.С.</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.site/a/18295">Лесков Н.С.</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/29586">Лесли Алекс</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/18270">Лихачев Дмитрий</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.site/a/47863">Лоэр Джим</a></h4></th>
@@ -1268,7 +1269,7 @@
 
 <table><tr align="left"> 
 <th colspan="10"><h4><a href="https://flibusta.site/a/1801">Лукьяненко Сергей</a> 
-					 <a href="https://flibusta.site/s/34360">и др.</a></h4></th>
+<a href="https://lukyanenko-books.ru/chronology-dozor.php">и др.</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/triks_1.jpg" title="Недотёпа"></th>
 <th><img src="jpg/triks_2.jpg" title="Непоседа"></th>
@@ -1276,16 +1277,6 @@
 <th><img src="jpg/chernovik_2.jpg" title="Чистовик"></th> 
 <th><img src="jpg/konec_legendi.jpg" title="Конец легенды (Сборник): Кредо, Мой папа – антибиотик, Вкус свободы, Дорога на Веллесберг, Почти весна, Слуга, Плетельщица Снов, Поезд в Теплый Край, Проводник Отсюда, Конец легенды, Хозяин Дорог, Фугу в мундире, Девочка с китайскими зажигалками, Гаджет, От судьбы, Живи спокойно, Вся эта ложь, Не спешу, Последняя ночь колдуна"></th> 
 <th><img src="jpg/konkyrenti.jpg" title="Конкуренты"></th>
-<th><img src="jpg/dozor_1.jpg" title="Ночной Дозор"></th>
-<th><img src="jpg/dozor_2.jpg" title="Дневной Дозор"></th>
-<th><img src="jpg/dozor_3.jpg" title="Сумеречный Дозор"></th>
-<th><a id="a68" src="jpg/dozor_4.jpg" title="Последний Дозор (аудиокнига)"></th> </tr>
-<tr> <th><a id="a70" src="jpg/dozor_5.jpg" title="Новый Дозор (аудиокнига)"></th>
-<th><a id="a71" src="jpg/dozor_6.jpg" title="Шестой Дозор (аудиокнига)"></th>
-<th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th>
-<th><a id="a95" src="jpg/dozor_02.jpg" title="Печать сумрака (аудиокнига)"></th>
-<th><a id="a96" src="jpg/dozor_03.jpg" title="Участковый (аудиокнига)"></th>
-<th><a id="a138" src="jpg/dozor_04.jpg" title="Время инверсий (аудиокнига)"></a></th>
 <th><a id="a78" src="jpg/labirint_otr_1.jpg" title="Лабиринт отражений (аудиокнига)"></th>
 <th><a id="a79" src="jpg/labirint_otr_2.jpg" title="Фальшивые зеркала (аудиокнига)"></th>
 <th><a id="a80" src="jpg/labirint_otr_3.jpg" title="Прозрачные витражи (аудиокнига)"></th>
@@ -1308,6 +1299,20 @@
 <th><img src="jpg/genom_2.jpg" title="Танцы на снегу"></th>
 <th><a id="a115" src="jpg/zvezdi_1.jpg" title="Звезды - холодные игрушки (аудиокнига)"></a></th>
 <th><img src="jpg/zvezdi_2.jpg" title="Звездная тень"></th> 
+<th><img src="jpg/dozor_1.jpg" title="Ночной Дозор"></th>
+<th><img src="jpg/dozor_2.jpg" title="Дневной Дозор"></th> </tr>
+<tr> <th><img src="jpg/dozor_3.jpg" title="Сумеречный Дозор"></th>
+<th><a id="a68" src="jpg/dozor_4.jpg" title="Последний Дозор (аудиокнига)"></th>
+<th><a id="a70" src="jpg/dozor_5.jpg" title="Новый Дозор (аудиокнига)"></th>
+
+<th><a id="a71" src="jpg/dozor_6.jpg" title="Шестой Дозор (аудиокнига)"></th>
+<th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th>
+
+<th><a id="a95" src="jpg/dozor_02.jpg" title="Печать сумрака (аудиокнига)"></th>
+<th><a id="a96" src="jpg/dozor_03.jpg" title="Участковый (аудиокнига)"></th>
+
+<th><a id="a138" src="jpg/dozor_04.jpg" title="Время инверсий (аудиокнига)"></a></th>
+<th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 </tr></table>
 
 
