--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head><meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
+<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="author" content="ldlolcl">
 <link rel="stylesheet" media="screen" type="text/css" title="Style" href="./css/style.css">
 <!-- Горизонтальный блок --><!-- <div id="block"> </div> --> 
 <!-- Пробел --><!-- &nbsp; --> 
@@ -10,6 +13,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a142" src="jpg/dozor_08.jpg" title="Лик Черной Пальмиры (аудиокнига)"></a></th>
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 <th><a id="a140" src="jpg/dozor_14.jpg" title="Время желаний (аудиокнига)"></a></th>
 <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
@@ -1307,18 +1311,18 @@
 <th><a id="a68" src="jpg/dozor_4.jpg" title="Последний Дозор (аудиокнига)"></th>
 <th><a id="a70" src="jpg/dozor_5.jpg" title="Новый Дозор (аудиокнига)"></th>
 <th><a id="a71" src="jpg/dozor_6.jpg" title="Шестой Дозор (аудиокнига)"></th>
-
+<th><a id="a142" src="jpg/dozor_08.jpg" title="Лик Черной Пальмиры (аудиокнига)"></a></th>
 <th><a id="a138" src="jpg/dozor_04.jpg" title="Время инверсий (аудиокнига)"></a></th>
 
 <th><a id="a96" src="jpg/dozor_03.jpg" title="Участковый (аудиокнига)"></th>
 
 <th><a id="a95" src="jpg/dozor_02.jpg" title="Печать сумрака (аудиокнига)"></th>
 <th><a id="a140" src="jpg/dozor_14.jpg" title="Время желаний (аудиокнига)"></a></th>
-<th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th>
+<th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th> </tr>
 
-<th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th> </tr>
+<tr> <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 
-<tr><th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
+<th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
 
 
