--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a143" src="jpg/dozor_10.jpg" title="Иной среди Иных (аудиокнига)"></a></th>
 <th><a id="a142" src="jpg/dozor_08.jpg" title="Лик Черной Пальмиры (аудиокнига)"></a></th>
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 <th><a id="a140" src="jpg/dozor_14.jpg" title="Время желаний (аудиокнига)"></a></th>
@@ -1313,14 +1314,14 @@
 <th><a id="a71" src="jpg/dozor_6.jpg" title="Шестой Дозор (аудиокнига)"></th>
 <th><a id="a142" src="jpg/dozor_08.jpg" title="Лик Черной Пальмиры (аудиокнига)"></a></th>
 <th><a id="a138" src="jpg/dozor_04.jpg" title="Время инверсий (аудиокнига)"></a></th>
-
+<th><a id="a143" src="jpg/dozor_10.jpg" title="Иной среди Иных (аудиокнига)"></a></th>
 <th><a id="a96" src="jpg/dozor_03.jpg" title="Участковый (аудиокнига)"></th>
 
 <th><a id="a95" src="jpg/dozor_02.jpg" title="Печать сумрака (аудиокнига)"></th>
-<th><a id="a140" src="jpg/dozor_14.jpg" title="Время желаний (аудиокнига)"></a></th>
-<th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th> </tr>
+<th><a id="a140" src="jpg/dozor_14.jpg" title="Время желаний (аудиокнига)"></a></th> </tr>
+<tr> <th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th>
 
-<tr> <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
+<th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
