--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <th><a id="a143" src="jpg/dozor_10.jpg" title="Иной среди Иных (аудиокнига)"></a></th>
 <th><a id="a142" src="jpg/dozor_08.jpg" title="Лик Черной Пальмиры (аудиокнига)"></a></th>
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
+	<th><img src="data/07.2024.jpg"></th>
 <th><a id="a140" src="jpg/dozor_14.jpg" title="Время желаний (аудиокнига)"></a></th>
 <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 <th><a id="a138" src="jpg/dozor_04.jpg" title="Время инверсий (аудиокнига)"></a></th>
