--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <base target="_blank">
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/dozor_17.jpg" title="Глубокий сумрак"></th>
 <th><a id="a144" src="jpg/dozor_12.jpg" title="Сын Дога (аудиокнига)"></a></th>
 <th><a id="a143" src="jpg/dozor_10.jpg" title="Иной среди Иных (аудиокнига)"></a></th>
 <th><a id="a142" src="jpg/dozor_08.jpg" title="Лик Черной Пальмиры (аудиокнига)"></a></th>
@@ -1322,7 +1323,7 @@
 <th><a id="a95" src="jpg/dozor_02.jpg" title="Печать сумрака (аудиокнига)"></th> </tr>
 <tr> <th><a id="a140" src="jpg/dozor_14.jpg" title="Время желаний (аудиокнига)"></a></th>
 <th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th>
-
+<th><img src="jpg/dozor_17.jpg" title="Глубокий сумрак"></th>
 <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
