--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <style> a {text-decoration: none;}</style>
 <base target="_blank">
 
+
+
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a145" src="jpg/dozor_19.jpg" title="Оперативный резерв (аудиокнига)"></a></th>
 <th><img src="jpg/dozor_17.jpg" title="Глубокий сумрак"></th>
 <th><a id="a144" src="jpg/dozor_12.jpg" title="Сын Дога (аудиокнига)"></a></th>
 <th><a id="a143" src="jpg/dozor_10.jpg" title="Иной среди Иных (аудиокнига)"></a></th>
@@ -1325,6 +1328,7 @@
 <th><a id="a92" src="jpg/dozor_01.jpg" title="Школьный надзор (аудиокнига)"></th>
 <th><img src="jpg/dozor_17.jpg" title="Глубокий сумрак"></th>
 <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
+<th><a id="a145" src="jpg/dozor_19.jpg" title="Оперативный резерв (аудиокнига)"></a></th>
 
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
