Прочитал Одиночный дозор

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a146" src="jpg/dozor_20.jpg" title="Одиночный дозор (аудиокнига)"></a></th>
 <th><a id="a145" src="jpg/dozor_19.jpg" title="Оперативный резерв (аудиокнига)"></a></th>
 <th><img src="jpg/dozor_17.jpg" title="Глубокий сумрак"></th>
 <th><a id="a144" src="jpg/dozor_12.jpg" title="Сын Дога (аудиокнига)"></a></th>
@@ -1329,6 +1330,7 @@
 <th><img src="jpg/dozor_17.jpg" title="Глубокий сумрак"></th>
 <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 <th><a id="a145" src="jpg/dozor_19.jpg" title="Оперативный резерв (аудиокнига)"></a></th>
+<th><a id="a146" src="jpg/dozor_20.jpg" title="Одиночный дозор (аудиокнига)"></a></th>
 
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
