--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a147" src="jpg/dozor_21.jpg" title="Масть (аудиокнига)"></a></th>
 <th><a id="a146" src="jpg/dozor_20.jpg" title="Одиночный дозор (аудиокнига)"></a></th>
 <th><a id="a145" src="jpg/dozor_19.jpg" title="Оперативный резерв (аудиокнига)"></a></th>
 <th><img src="jpg/dozor_17.jpg" title="Глубокий сумрак"></th>
@@ -1331,6 +1332,7 @@
 <th><a id="a139" src="jpg/dozor_05.jpg" title="Теневой Дозор (аудиокнига)"></a></th>
 <th><a id="a145" src="jpg/dozor_19.jpg" title="Оперативный резерв (аудиокнига)"></a></th>
 <th><a id="a146" src="jpg/dozor_20.jpg" title="Одиночный дозор (аудиокнига)"></a></th>
+<th><a id="a147" src="jpg/dozor_21.jpg" title="Масть (аудиокнига)"></a></th>
 
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
