Прочитал Когда извинений недостаточно

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/izvini.jpg" title="Когда извинений недостаточно"></th>
 <th><a id="a148" src="jpg/dozor_22.jpg" title="Дозоры не работают вместе (аудиокнига)"></a></th>
 <th><a id="a147" src="jpg/dozor_21.jpg" title="Масть (аудиокнига)"></a></th>
 <th><a id="a146" src="jpg/dozor_20.jpg" title="Одиночный дозор (аудиокнига)"></a></th>
@@ -1848,12 +1849,13 @@
 
 <table><tr align="left">
 <th colspan="2"><h4><a href="https://flibusta.site/a/1884">  Чан Джеки</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.site/a/1944">  Чепмен Гэри</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.site/a/1944">  Чепмен Гэри</a></h4></th>
 <th colspan="6"><h4><a href="https://flibusta.site/a/105940">Черненко Алексей</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/chan.jpg" title="Я - Джеки Чан"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/12_voprosov.jpg" title="Одной любви недостаточно. 12 вопросов, на которые нужно ответить, прежде чем решиться на брак"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/12_voprosov.jpg" title="Одной любви недостаточно. 12 вопросов, на которые нужно ответить, прежде чем решиться на брак"></th>
+<th><img src="jpg/izvini.jpg" title="Когда извинений недостаточно"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/lord_dark_2.jpg" title="Лорд Дарк. Ученик"></th>
 <th><img src="jpg/lord_dark_3.jpg" title="Лорд Дарк. Колдун"></th>
