--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/08.2024.jpg"></th>
 <th><img src="jpg/izvini.jpg" title="Когда извинений недостаточно"></th>
 <th><a id="a148" src="jpg/dozor_22.jpg" title="Дозоры не работают вместе (аудиокнига)"></a></th>
 <th><a id="a147" src="jpg/dozor_21.jpg" title="Масть (аудиокнига)"></a></th>
