--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a149" src="jpg/dozor_23.jpg" title="Цветной дозор (аудиокнига)"></a></th>
 	<th><img src="data/08.2024.jpg"></th>
 <th><img src="jpg/izvini.jpg" title="Когда извинений недостаточно"></th>
 <th><a id="a148" src="jpg/dozor_22.jpg" title="Дозоры не работают вместе (аудиокнига)"></a></th>
@@ -1337,6 +1338,7 @@
 <th><a id="a146" src="jpg/dozor_20.jpg" title="Одиночный дозор (аудиокнига)"></a></th>
 <th><a id="a147" src="jpg/dozor_21.jpg" title="Масть (аудиокнига)"></a></th>
 <th><a id="a148" src="jpg/dozor_22.jpg" title="Дозоры не работают вместе (аудиокнига)"></a></th>
+<th><a id="a149" src="jpg/dozor_23.jpg" title="Цветной дозор (аудиокнига)"></a></th>
 
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
