Прочитал Севастопольский Дозор

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a151" src="jpg/dozor_24.jpg" title="Севастопольский Дозор (аудиокнига)"></a></th>
 <th><a id="a150" src="jpg/homodeus.jpg" title="Homo Deus. Краткая история будущего (аудиокнига)"></a></th>
 <th><a id="a149" src="jpg/dozor_23.jpg" title="Цветной дозор (аудиокнига)"></a></th>
 	<th><img src="data/08.2024.jpg"></th>
@@ -1340,8 +1341,9 @@
 <th><a id="a147" src="jpg/dozor_21.jpg" title="Масть (аудиокнига)"></a></th>
 <th><a id="a148" src="jpg/dozor_22.jpg" title="Дозоры не работают вместе (аудиокнига)"></a></th>
 <th><a id="a149" src="jpg/dozor_23.jpg" title="Цветной дозор (аудиокнига)"></a></th>
+<th><a id="a151" src="jpg/dozor_24.jpg" title="Севастопольский Дозор (аудиокнига)"></a></th> </tr>
 
-<th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
+<tr> <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
 
 
