Прочитал Assassin’s Creed. Валгалла

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a152" src="jpg/assassins_11.jpg" title="Assassin’s Creed. Валгалла: Сага о Гейрмунне (аудиокнига)"></a></th>
 <th><a id="a151" src="jpg/dozor_24.jpg" title="Севастопольский Дозор (аудиокнига)"></a></th>
 <th><a id="a150" src="jpg/homodeus.jpg" title="Homo Deus. Краткая история будущего (аудиокнига)"></a></th>
 <th><a id="a149" src="jpg/dozor_23.jpg" title="Цветной дозор (аудиокнига)"></a></th>
@@ -1116,68 +1117,75 @@
 <th colspan="2"><h4>									   Кинг Бернард</h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/5803">  Кинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/17765"> Киплинг Редьярд</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/192136">Кирби Мэтью</a></h4></th>
+
 </tr><tr>  
 <th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
 <th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/matthew_kirby_1.jpg" title="Последние потомки"></th>
-<th><img src="jpg/matthew_kirby_2.jpg" title="Гробница хана"></th>
-<th><img src="jpg/matthew_kirby_3.jpg" title="Участь богов"></th> 
+<th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="4"><h4><a href="https://flibusta.is/a/124636">					  Клайн Эрнест</a></h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/25404">					  Кларк Артур</a></h4></th>
-<th colspan="2"><h4><div align="right"><a href="https://flibusta.is/a/181005">Кларк Дункан</a></div></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/192136">Кирби Мэтью</a></h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/124636">Клайн Эрнест</a></h4></th>
 </tr><tr>  
+<th><img src="jpg/matthew_kirby_1.jpg" title="Последние потомки"></th>
+<th><img src="jpg/matthew_kirby_2.jpg" title="Гробница хана"></th>
+<th><img src="jpg/matthew_kirby_3.jpg" title="Участь богов"></th>
+<th><a id="a152" src="jpg/assassins_11.jpg" title="Assassin’s Creed. Валгалла: Сага о Гейрмунне (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/ready_player_one.jpg" title="Первому игроку приготовиться"></th>
 <th><img src="jpg/ready_player_two.jpg" title="Второму игроку приготовиться"></th>
-<th><img src="jpg/armada.jpg" title="Армада"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/armada.jpg" title="Армада"></th> 
+</tr></table>
 
+
+
+<table><tr align="left"> 
+<th colspan="5"><h4><a href="https://flibusta.is/a/25404"> Кларк Артур</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/181005">Кларк Дункан</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/230855">Клейсон Джордж</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/223961">Клир Джеймс</a></h4></th>
+</tr><tr>  
 <th><a id="a124" src="jpg/klark_1.jpg" title="2001: Космическая одиссея (аудиокнига)"></a></th>
 <th><a id="a131" src="jpg/klark_2.jpg" title="2010: Одиссея Два (аудиокнига)"></a></th>
 <th><a id="a132" src="jpg/klark_3.jpg" title="2061: Одиссея Три (аудиокнига)"></a></th>
 <th><img src="jpg/klark_4.jpg" title="3001: Последняя Одиссея"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a35" src="jpg/alibaba.jpg" title="Alibaba. История мирового восхождения от первого лица (аудиокнига)"></th>
+<th><a id="a35" src="jpg/alibaba.jpg" title="Alibaba. История мирового восхождения от первого лица (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
+
+<th><a id="a26" src="jpg/vavilon.jpg" title="Самый богатый человек в Вавилоне (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th> 
+
+<th><img src="jpg/atom_priv.jpg" title="Атомные привычки. Как приобрести хорошие привычки и избавиться от плохих"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/230855">Клейсон Джордж</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/223961">Клир Джеймс</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/229144">Кляйн Марти</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/50647"> Кови Стивен</a></h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/50647"> Кови Стивен</a></h4></th>
+<th colspan="3"><h4>									   Ковтун Игорь</h4></th>
 </tr><tr>  
-<th><a id="a26" src="jpg/vavilon.jpg" title="Самый богатый человек в Вавилоне (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th> 
-
-<th><img src="jpg/atom_priv.jpg" title="Атомные привычки. Как приобрести хорошие привычки и избавиться от плохих"></th> <th><img src="jpg/0.jpg"></th> 
-	
 <th><img src="jpg/sex_intel.jpg" title="Сексуальный интеллект"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/7_navikov.jpg" title="Семь навыков высокоэффективных людей"></th>
 <th><a id="a23" src="jpg/8_navik.jpg" title="Восьмой навык. От эффективности к величию (аудиокнига)"></th>
-<th><a id="a83" src="jpg/kovi_1.jpg" title="Фокус: Достижение приоритетных целей (аудиокнига)"></th> 
+<th><a id="a83" src="jpg/kovi_1.jpg" title="Фокус: Достижение приоритетных целей (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th> 
+
+<th><img src="jpg/kovtun_1.jpg" title="Прокачай себя. Занятия с собственным весом"></th> 
+<th><img src="jpg/kovtun_2.jpg" title="Прокачай себя. Тренировки дома"></th> 
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4>									   Ковтун Игорь</h4></th>
 <th colspan="4"><h4><a href="https://flibusta.is/a/14581"> Коллинз Сьюзен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/181229">Кононов Николай</a></h4></th>
 </tr><tr>  
-<th><img src="jpg/kovtun_1.jpg" title="Прокачай себя. Занятия с собственным весом"></th> 
-<th><img src="jpg/kovtun_2.jpg" title="Прокачай себя. Тренировки дома"></th> <th><img src="jpg/0.jpg"></th>
-
 <th><img src="jpg/hunger_games_1.jpg" title="Голодные игры"></th>
 <th><img src="jpg/hunger_games_2.jpg" title="И вспыхнет пламя"></th>
 <th><img src="jpg/hunger_games_3.jpg" title="Сойка-пересмешница"></th> <th><img src="jpg/0.jpg"></th>
