--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a153" src="jpg/dozor_26.jpg" title="Тайный Дозор (аудиокнига)"></a></th>
 <th><a id="a152" src="jpg/assassins_11.jpg" title="Assassin’s Creed. Валгалла: Сага о Гейрмунне (аудиокнига)"></a></th>
 <th><a id="a151" src="jpg/dozor_24.jpg" title="Севастопольский Дозор (аудиокнига)"></a></th>
 <th><a id="a150" src="jpg/homodeus.jpg" title="Homo Deus. Краткая история будущего (аудиокнига)"></a></th>
@@ -1351,7 +1352,9 @@
 <th><a id="a149" src="jpg/dozor_23.jpg" title="Цветной дозор (аудиокнига)"></a></th>
 <th><a id="a151" src="jpg/dozor_24.jpg" title="Севастопольский Дозор (аудиокнига)"></a></th> </tr>
 
-<tr> <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
+<tr> <th><a id="a153" src="jpg/dozor_26.jpg" title="Тайный Дозор (аудиокнига)"></a></th>
+
+<th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
 
 
