--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="ldlolcl">
+<link rel="shortcut icon" href="icon.png"/>
 <link rel="stylesheet" media="screen" type="text/css" title="Style" href="./css/style.css">
 <!-- Горизонтальный блок --><!-- <div id="block"> </div> --> 
 <!-- Пробел --><!-- &nbsp; --> 
@@ -15,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/09.2024.jpg"></th>
 <th><a id="a155" src="jpg/dozor_28.jpg" title="Невский Дозор (аудиокнига)"></a></th>
 <th><a id="a154" src="jpg/dozor_27.jpg" title="Сердце Сумрака (аудиокнига)"></a></th>
 <th><a id="a153" src="jpg/dozor_26.jpg" title="Тайный Дозор (аудиокнига)"></a></th>
@@ -1353,11 +1355,9 @@
 <th><a id="a148" src="jpg/dozor_22.jpg" title="Дозоры не работают вместе (аудиокнига)"></a></th>
 <th><a id="a149" src="jpg/dozor_23.jpg" title="Цветной дозор (аудиокнига)"></a></th>
 <th><a id="a151" src="jpg/dozor_24.jpg" title="Севастопольский Дозор (аудиокнига)"></a></th> </tr>
-
 <tr> <th><a id="a153" src="jpg/dozor_26.jpg" title="Тайный Дозор (аудиокнига)"></a></th>
 <th><a id="a154" src="jpg/dozor_27.jpg" title="Сердце Сумрака (аудиокнига)"></a></th>
 <th><a id="a155" src="jpg/dozor_28.jpg" title="Невский Дозор (аудиокнига)"></a></th>
-
 <th><a id="a141" src="jpg/dozor_09.jpg" title="Книжный Дозор (аудиокнига)"></a></th>
 </tr></table>
 
