Прочитал Буря эпохи Мин

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/assassins_12.jpg" title="Assassins Creed: Буря эпохи Мин"></th>
 	<th><img src="data/09.2024.jpg"></th>
 <th><a id="a155" src="jpg/dozor_28.jpg" title="Невский Дозор (аудиокнига)"></a></th>
 <th><a id="a154" src="jpg/dozor_27.jpg" title="Сердце Сумрака (аудиокнига)"></a></th>
@@ -1364,11 +1365,14 @@
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/300245">Лэйшэн Янь</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/111526">Макгонигал Келли</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/180508">Макланахан Ди</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/150153">Малерман Джош</a></h4></th>
 <th colspan="2"><h4>									   Манганьелло Джо</h4></th>
 </tr><tr>  
+<th><img src="jpg/assassins_12.jpg" title="Assassins Creed: Буря эпохи Мин"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><a id="a17" src="jpg/sila_voli.jpg" title="Сила воли (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/7_dnei_1.jpg" title="Научись влиять на людей за 7 дней"></th> <th><img src="jpg/0.jpg"></th>
