Прочитал Будь нужным: Семь правил жизни

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a156" src="jpg/byd_nyzhnim.jpg" title="Будь нужным: Семь правил жизни (аудиокнига)"></a></th>
 <th><img src="jpg/assassins_12.jpg" title="Assassins Creed: Буря эпохи Мин"></th>
 	<th><img src="data/09.2024.jpg"></th>
 <th><a id="a155" src="jpg/dozor_28.jpg" title="Невский Дозор (аудиокнига)"></a></th>
@@ -1908,7 +1909,7 @@
 
 <table><tr align="left"> 
 <th colspan="6"><h4><a href="https://flibusta.is/a/25175">Шарма Робин</a></h4></th>
-<th colspan="4"><h4><a href="https://flibusta.is/a/20365">Шварценеггер Арнольд</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/20365">Шварценеггер Арнольд</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/robin_sharma_1.jpg" title="Кто заплачет когда ты умрешь"></th>
 <th><img src="jpg/robin_sharma_2.jpg" title="9 тайных посланий от монаха, который продал свой «феррари»"></th>
@@ -1918,7 +1919,8 @@
 
 <th><img src="jpg/vspomnit_vse.jpg" title="Вспомнить всё. Моя невероятно правдивая история"></th> 
 <th><img src="jpg/encyclopedia.jpg" title="Новая энциклопедия бодибилдинга. № 1 2 3 4 5"></th>
-<th><img src="jpg/arnold.jpg" title="Учебник культуризма"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/arnold.jpg" title="Учебник культуризма"></th> 
+<th><a id="a156" src="jpg/byd_nyzhnim.jpg" title="Будь нужным: Семь правил жизни (аудиокнига)"></a></th>
 </tr></table>
 
 
