--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/ti_v_poriadke.jpg" title="Ты в порядке: Книга о том, как нельзя с собой и не надо с другими"></th>
 <th><a id="a156" src="jpg/byd_nyzhnim.jpg" title="Будь нужным: Семь правил жизни (аудиокнига)"></a></th>
 <th><img src="jpg/assassins_12.jpg" title="Assassins Creed: Буря эпохи Мин"></th>
 	<th><img src="data/09.2024.jpg"></th>
@@ -439,8 +440,8 @@
 <th colspan="2"><h4> </h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/208792">Аветисян Самвел</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/58">	  Адамс Дуглас</a></h4></th>
-<th colspan="3"><h4><a href="http://flibusta.is/a/656">	  Азимов Айзек</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
- 			   		<a href="http://flibusta.is/a/85845"> Айзексон Уолтер</a></h4></th>
+<th colspan="3"><h4><a href="http://flibusta.is/a/245010">Адлер Алина</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ 			   		<a href="http://flibusta.is/a/656">	  Азимов Айзек</a></h4></th>
 </tr><tr>
 <th><a id="a119" src="jpg/1001_noch.jpg" title="Тысяча и одна ночь. Сказки Шахерезады. Самая полная версия (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
@@ -449,20 +450,22 @@
 <th><img src="jpg/avtostopom_po_galaktike_1.jpg" title="Автостопом по Галактике 1 2 _ _ _"></th>
 <th><img src="jpg/dirk_dzhentli.jpg" title="Детективное агентство Дирка Джентли 1 2 3"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/azimov_3.jpg" title="Основатели"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/ti_v_poriadke.jpg" title="Ты в порядке: Книга о том, как нельзя с собой и не надо с другими"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/stiv_dzhobs.jpg" title="Стив Джобс"></th> 
+<th><img src="jpg/azimov_3.jpg" title="Основатели"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/85845"> Айзексон Уолтер</a></h4></th>	
 <th colspan="2"><h4><a href="http://flibusta.is/a/25986"> Аллен Дэвид</a></h4></th>	
 <th colspan="2"><h4><a href="http://flibusta.is/a/201203">Альмоссави Али</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/279985">Андриян Анастасия</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/29428"> Архангельский Глеб</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/191615">Асад-заде Чингиз</a></h4></th>
 </tr><tr>
+<th><img src="jpg/stiv_dzhobs.jpg" title="Стив Джобс"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/kak_privesti_dela.jpg" title="Как привести дела в порядок"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/hackni.jpg" title="Хакни рутину. Как алгоритмы помогают справляться с беспорядком, не тупить в супермаркете и жить проще"></th> <th><img src="jpg/0.jpg"></th>
@@ -470,19 +473,19 @@
 <th><img src="jpg/perevodchik.jpg" title="Переводчик с пассивно-агрессивного на общечеловеческий"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/findraiv.jpg" title="Финдрайв: как привлечь, сохранить и выгодно вложить свои деньги"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/sistema_razyma.jpg" title="Система Разума. Секреты ментализма"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/191615">Асад-заде Чингиз</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/30541"> Аткинсон Уильям</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/25885"> Баллард Джеймс</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/139762">Барден Фил</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/149766">Белоусова Татьяна</a></h4></th>
 </tr><tr>
+<th><img src="jpg/sistema_razyma.jpg" title="Система Разума. Секреты ментализма"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/sila_misli.jpg" title="Закон привлечения и сила мысли"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/visotka.jpg" title="Высотка"></th> <th><img src="jpg/0.jpg"></th>
@@ -490,18 +493,18 @@
 <th><img src="jpg/vzlom_marketinga.jpg" title="Взлом маркетинга. Наука о том, почему мы покупаем"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a18" src="jpg/45_taty.jpg" title="45 татуировок менеджера (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
-
-<th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/149766">Белоусова Татьяна</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/32388"> Беннет Арнольд</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/215022">Белинг Стив</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/129573">Белфорт Джордан</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/239832">Берг Натали</a></h4></th>
 </tr><tr>
+<th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/24.jpg" title="Как жить 24 часа в сутки"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/marvel_1.jpg" title="Мстители. Война Бесконечности. Путь героев"></th>
@@ -509,16 +512,17 @@
 
 <th><a id="a33" src="jpg/volk_1.jpg" title="Волк с Уолл-стрит (аудиокнига)"></th> 
 <th><img src="jpg/metod_volka.jpg" title="Метод волка с Уолл-стрит. Откровения лучшего продавца в мире"></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a104" src="jpg/amazon.jpg" title="Amazon. От офиса в гараже до $10 млрд годового дохода (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/239832">Берг Натали</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/1128"> Берджесс Энтони</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/33434">Берн Ронда</a></h4></th>
 </tr><tr>
+<th><a id="a104" src="jpg/amazon.jpg" title="Amazon. От офиса в гараже до $10 млрд годового дохода (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+	
 <th><a id="a99" src="jpg/z_apelsin.jpg" title="Заводной апельсин (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 	
 <th><a id="a45" src="jpg/the_secret.jpg" title="Тайна (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
@@ -1857,7 +1861,7 @@
 <th colspan="3"><h4><a href="https://flibusta.is/a/11">	   Хокинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a>| 
+<th colspan="3"><h4><a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a>
 					<a href="https://flibusta.is/a/6117">  Чалдини Роберт</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/hoking_1.jpg" title="Теория всего. От сингулярности до бесконечности, происхождение и судьба Вселенной"></th>
