--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th>
 <th><img src="jpg/ti_v_poriadke.jpg" title="Ты в порядке: Книга о том, как нельзя с собой и не надо с другими"></th>
 <th><a id="a156" src="jpg/byd_nyzhnim.jpg" title="Будь нужным: Семь правил жизни (аудиокнига)"></a></th>
 <th><img src="jpg/assassins_12.jpg" title="Assassins Creed: Буря эпохи Мин"></th>
@@ -1049,20 +1050,21 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/185005">Кавана Джон</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/188174">Кавашима Рюта</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/188174">Кавашима Рюта</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/252840">Карапинар Онур</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/181230">Кардон Грант</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/181230">Кардон Грант</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/199351">Карназес Дин</a></h4></th>
 </tr><tr>   
 <th><img src="jpg/conor_mcgregor.jpg" title="Конор Макгрегор. Жизнь без правил"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th> <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/kavashima_1.jpg" title="Японская система развития интеллекта и памяти"></th>
+<th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><a id="a98" src="jpg/51_praktika.jpg" title="Маленькие привычки, большие успехи. 51 вдохновляющая практика, чтобы стать лучшей версией себя (аудиокнига)"></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/10X.jpg" title="Правило в 10 раз больше"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></th> <th><img src="jpg/0.jpg"></th> 
+<th><img src="jpg/beg_bez_sna.jpg" title="Бегущий без сна"></th>
 </tr></table>
 
 
