Прочитал Бизнесхак на каждый день

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/bizneshaki.jpg" title="Бизнесхак на каждый день. Экономьте время, деньги и силы"></th>
 <th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th>
 <th><img src="jpg/ti_v_poriadke.jpg" title="Ты в порядке: Книга о том, как нельзя с собой и не надо с другими"></th>
 <th><a id="a156" src="jpg/byd_nyzhnim.jpg" title="Будь нужным: Семь правил жизни (аудиокнига)"></a></th>
@@ -1392,12 +1393,13 @@
 
 
 <table><tr align="left"> 
-<th colspan="4"><h4><a href="https://flibusta.is/a/29468">Манн Игорь</a></h4></th>
+<th colspan="5"><h4><a href="https://flibusta.is/a/29468">Манн Игорь</a></h4></th>
 <th colspan="5"><h4><a href="https://flibusta.is/a/7910"> Мартин Джордж</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/nomer_1.jpg" title="Номер 1"></th>
 <th><img src="jpg/mann_2.jpg" title="Маркетинг на 100%. Ремикс"></th>
-<th><img src="jpg/lifehack.jpg" title="Лайфхак на каждый день"></th> <th><img src="jpg/0.jpg"></th> 
+<th><img src="jpg/lifehack.jpg" title="Лайфхак на каждый день"></th>
+<th><img src="jpg/bizneshaki.jpg" title="Бизнесхак на каждый день. Экономьте время, деньги и силы"></th> <th><img src="jpg/0.jpg"></th> 
 
 <th><img src="jpg/game_of_thrones_1.jpg" title="Игра престолов"></th>
 <th><img src="jpg/game_of_thrones_2.jpg" title="Битва королей"></th>
