--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a157" src="jpg/eragon_1.jpg" title="Эрагон (аудиокнига)"></a></th>
 <th><img src="jpg/bizneshaki.jpg" title="Бизнесхак на каждый день. Экономьте время, деньги и силы"></th>
 <th><img src="jpg/mozg_tetrad_1.jpg" title="Тренируем мозг. Тетрадь для развития памяти и интеллекта №1"></th>
 <th><img src="jpg/ti_v_poriadke.jpg" title="Ты в порядке: Книга о том, как нельзя с собой и не надо с другими"></th>
@@ -1475,30 +1476,33 @@
 <table><tr align="left"> 
 <th colspan="3"><h4><a href="https://flibusta.is/a/9162">  Оруэлл Джордж</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/9261">  Паланик Чак</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/140559">Папазан Джей</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/196223">Пезешкиан Хамид</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/152613">Перси Аллан</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/24255"> Паолини Кристофер</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/140559">Папазан Джей</a> &nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/196223">Пезешкиан Хамид</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/1984.jpg" title="1984"></th>
 <th><a id="a41" src="jpg/skotni_dvor.jpg" title="Скотный двор (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
 
 <th><img src="jpg/boytsovskiy_klub.jpg" title="Бойцовский клуб"></th> <th><img src="jpg/0.jpg"></th>
 
+<th><a id="a157" src="jpg/eragon_1.jpg" title="Эрагон (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/nachni_s_glavnogo.jpg" title="Папазан Джей, Келлер Гэри  - Начни с главного!"></th> <th><img src="jpg/0.jpg"></th>
 
-<th><a id="a116" src="jpg/psixovampiri.jpg" title="Психовампиры (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
-
-<th><a id="a77" src="jpg/enshtein.jpg" title="Правила жизни от Альберта Эйнштейна (аудиокнига)"></a></th>
+<th><a id="a116" src="jpg/psixovampiri.jpg" title="Психовампиры (аудиокнига)"></a></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/152613">Перси Аллан</a></h4></th>
 <th colspan="4"><h4><a href="https://flibusta.is/a/9658">  Пиз Аллан</a> и 
 					<a href="https://flibusta.is/a/9659">  Барбара</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/144350">Питерс Стив</a></h4></th>
 <th colspan="2"><h4>									   Платаниа Джон</h4></th>
 </tr><tr>  
+<th><a id="a77" src="jpg/enshtein.jpg" title="Правила жизни от Альберта Эйнштейна (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
+
 <th><img src="jpg/yazyk_telodvizheniy.jpg" title="Язык телодвижений"></th>
 <th><img src="jpg/harizma.jpg" title="Харизма. Искусство успешного общения"></th>
 <th><a id="a22" src="jpg/pochemy_myzhchini.jpg" title="Почему мужчины хотят секса, а женщины любви (аудиокнига)"></a></th> <th><img src="jpg/0.jpg"></th>
@@ -1864,8 +1868,8 @@
 <table><tr align="left"> 
 <th colspan="3"><h4><a href="https://flibusta.is/a/11">	   Хокинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a>
+<th colspan="5"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a>&nbsp;
 					<a href="https://flibusta.is/a/6117">  Чалдини Роберт</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/hoking_1.jpg" title="Теория всего. От сингулярности до бесконечности, происхождение и судьба Вселенной"></th>
