Прочитал Пираты Венеры

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a158" src="jpg/venus_1.jpg" title="Пираты Венеры (аудиокнига)"></a></th>
 	<th><img src="data/10.2024.jpg"></th>
 <th><a id="a157" src="jpg/eragon_1.jpg" title="Эрагон (аудиокнига)"></a></th>
 <th><img src="jpg/bizneshaki.jpg" title="Бизнесхак на каждый день. Экономьте время, деньги и силы"></th>
@@ -575,7 +576,8 @@
 <th><img src="jpg/tarzan_24.jpg" title="Поиск Тарзана"></th>
 <th><img src="jpg/tarzan_25.jpg" title="Тарзан и сумасшедший"></th>
 <th><img src="jpg/tarzan_26.jpg" title="Тарзан и Иностранный легион"></th>
-<th><img src="jpg/tarzan_27.jpg" title="Забытое приключение Тарзана"></th> 
+<th><img src="jpg/tarzan_27.jpg" title="Забытое приключение Тарзана"></th>
+<th><a id="a158" src="jpg/venus_1.jpg" title="Пираты Венеры (аудиокнига)"></a></th>
 </tr></table>
 
 
