--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a159" src="jpg/eragon_2.jpg" title="Эрагон. Возвращение (аудиокнига)"></a></th>
 <th><img src="jpg/iskysstvo_vtorzhenia.jpg" title="Искусство вторжения"></th>
 <th><a id="a158" src="jpg/venus_1.jpg" title="Пираты Венеры (аудиокнига)"></a></th>
 	<th><img src="data/10.2024.jpg"></th>
@@ -1521,7 +1522,7 @@
 					<a href="https://flibusta.is/a/152613">Перси Аллан</a></h4></th>
 </tr><tr>  
 <th><a id="a157" src="jpg/eragon_1.jpg" title="Эрагон (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
+<th><a id="a159" src="jpg/eragon_2.jpg" title="Эрагон. Возвращение (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
