Прочитал Затерянные на Венере

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/venus_2.jpg" title="Затерянные на Венере"></th>
 <th><a id="a159" src="jpg/eragon_2.jpg" title="Эрагон. Возвращение (аудиокнига)"></a></th>
 <th><img src="jpg/iskysstvo_vtorzhenia.jpg" title="Искусство вторжения"></th>
 <th><a id="a158" src="jpg/venus_1.jpg" title="Пираты Венеры (аудиокнига)"></a></th>
@@ -528,8 +529,8 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/239832">Берг Натали</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/1128"> Берджесс Энтони</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/33434">Берн Ронда</a></h4></th>
+<th colspan="2"><h4><a href="http://flibusta.is/a/1128">  Берджесс Энтони</a></h4></th>
+<th colspan="2"><h4><a href="http://flibusta.is/a/33434"> Берн Ронда</a></h4></th>
 </tr><tr>
 <th><a id="a104" src="jpg/amazon.jpg" title="Amazon. От офиса в гараже до $10 млрд годового дохода (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
@@ -583,7 +584,8 @@
 <th><img src="jpg/tarzan_25.jpg" title="Тарзан и сумасшедший"></th>
 <th><img src="jpg/tarzan_26.jpg" title="Тарзан и Иностранный легион"></th>
 <th><img src="jpg/tarzan_27.jpg" title="Забытое приключение Тарзана"></th>
-<th><a id="a158" src="jpg/venus_1.jpg" title="Пираты Венеры (аудиокнига)"></a></th>
+<th><a id="a158" src="jpg/venus_1.jpg" title="Пираты Венеры (аудиокнига)"></a></th> </tr>
+<tr> <th><img src="jpg/venus_2.jpg" title="Затерянные на Венере"></th>
 </tr></table>
 
 
