Прочитал Бегство на Венеру

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/venus_4.jpg" title="Бегство на Венеру"></th>
 <th><img src="jpg/venus_3.jpg" title="Карсон Венерианский"></th>
 <th><img src="jpg/venus_2.jpg" title="Затерянные на Венере"></th>
 <th><a id="a159" src="jpg/eragon_2.jpg" title="Эрагон. Возвращение (аудиокнига)"></a></th>
@@ -588,6 +589,7 @@
 <th><a id="a158" src="jpg/venus_1.jpg" title="Пираты Венеры (аудиокнига)"></a></th> </tr>
 <tr> <th><img src="jpg/venus_2.jpg" title="Затерянные на Венере"></th>
 <th><img src="jpg/venus_3.jpg" title="Карсон Венерианский"></th>
+<th><img src="jpg/venus_4.jpg" title="Бегство на Венеру"></th>
 </tr></table>
 
 
