Прочитал Венерианский маг

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/venus_5.jpg" title="Венерианский маг (фрагмент)"></th>
 <th><img src="jpg/venus_4.jpg" title="Бегство на Венеру"></th>
 <th><img src="jpg/venus_3.jpg" title="Карсон Венерианский"></th>
 <th><img src="jpg/venus_2.jpg" title="Затерянные на Венере"></th>
@@ -590,6 +591,7 @@
 <tr> <th><img src="jpg/venus_2.jpg" title="Затерянные на Венере"></th>
 <th><img src="jpg/venus_3.jpg" title="Карсон Венерианский"></th>
 <th><img src="jpg/venus_4.jpg" title="Бегство на Венеру"></th>
+<th><img src="jpg/venus_5.jpg" title="Венерианский маг (фрагмент)"></th>
 </tr></table>
 
 
