--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
 <th><img src="jpg/venus_5.jpg" title="Венерианский маг (фрагмент)"></th>
 <th><img src="jpg/venus_4.jpg" title="Бегство на Венеру"></th>
 <th><img src="jpg/venus_3.jpg" title="Карсон Венерианский"></th>
@@ -1157,13 +1158,14 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4>									   Кинг Бернард</h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/5803">  Кинг Стивен</a></h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/5803">  Кинг Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/17765"> Киплинг Редьярд</a></h4></th>
 </tr><tr>  
 <th><a id="a2" src="jpg/privychki_uspeshnykh_lyudey.jpg" title="Привычки успешных людей (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/pobeg_iz_shoushenka.jpg" title="Рита Хейуорт и спасение из Шоушенка"></th>
 <th><img src="jpg/zelenaya_milya.jpg" title="Зеленая Миля"></th>
+<th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a54" src="jpg/kniga_djunglei.jpg" title="Книга джунглей (аудиокнига)"></a></th> 
 </tr></table>
