--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+	<th><img src="data/11.2024.jpg"></th>
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
 <th><img src="jpg/venus_5.jpg" title="Венерианский маг (фрагмент)"></th>
 <th><img src="jpg/venus_4.jpg" title="Бегство на Венеру"></th>
