Прочитал Эрагон. Брисингр

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a160" src="jpg/eragon_3.jpg" title="Эрагон. Брисингр (аудиокнига)"></a></th>
 	<th><img src="data/11.2024.jpg"></th>
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
 <th><img src="jpg/venus_5.jpg" title="Венерианский маг (фрагмент)"></th>
@@ -1534,7 +1535,7 @@
 </tr><tr>  
 <th><a id="a157" src="jpg/eragon_1.jpg" title="Эрагон (аудиокнига)"></a></th>
 <th><a id="a159" src="jpg/eragon_2.jpg" title="Эрагон. Возвращение (аудиокнига)"></a></th>
-<th><img src="jpg/0.jpg"></th>
+<th><a id="a160" src="jpg/eragon_3.jpg" title="Эрагон. Брисингр (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/nachni_s_glavnogo.jpg" title="Папазан Джей, Келлер Гэри  - Начни с главного!"></th>
