--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/prestizh.jpg" title="Престиж"></th>
 <th><a id="a160" src="jpg/eragon_3.jpg" title="Эрагон. Брисингр (аудиокнига)"></a></th>
 	<th><img src="data/11.2024.jpg"></th>
 <th><img src="jpg/dolgaia_progylka.jpg" title="Долгая прогулка"></th>
@@ -1587,12 +1588,15 @@
 <th colspan="2"><h4><a href="https://flibusta.is/a/9914">  Прайор Карен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/28700"> Прессфилд Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/234280">Примаченко Ольга</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/9956">  Прист Кристофер</a></h4></th>
 </tr><tr>  
 <th><a id="a13" src="jpg/ne_ruchite_na_sobaky.jpg" title="Не рычите на собаку! (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/voina_za_kreativ.jpg" title="Война за креатив. Как преодолеть внутренние барьеры и начать творить"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/s_toboi.jpg" title="С тобой я дома. Книга о том, как любить друг друга, оставаясь верными себе"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/prestizh.jpg" title="Престиж"></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
